--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ioh_c22_h2_4.hy_ponics" >
+    package="com.ioh_c22_h2_4.hy_ponics">
 
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -11,7 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HyPonics" >
+        android:theme="@style/Theme.HyPonics">
+        <activity
+            android:name=".NotificationMenu"
+            android:exported="false" />
         <activity
             android:name=".CameraActivity"
             android:exported="false" />
@@ -20,9 +24,8 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
-            android:theme="@style/Theme.HyPonics.SplashScreen"
-            android:exported="true">
-
+            android:exported="true"
+            android:theme="@style/Theme.HyPonics.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
