--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HyPonics">
+        android:theme="@style/Theme.HyPonics" >
+        <activity
+            android:name=".TanamanActivity"
+            android:exported="false" />
         <activity
             android:name=".DetailProfile"
             android:exported="false" />
@@ -36,8 +39,9 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
-            android:exported="true"
-            android:theme="@style/Theme.HyPonics.SplashScreen">
+            android:theme="@style/Theme.HyPonics.SplashScreen"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
