--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,37 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HyPonics" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.check.CheckActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TanamanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".IOTActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DetailProfile"
+            android:exported="false" />
+        <activity
+            android:name=".NotificationMenu"
+            android:exported="false" />
+        <activity
+            android:name=".IdentificationMenu"
+            android:exported="false" />
+        <activity
+            android:name=".CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DetailArticleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingMenu"
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
