--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     ext {
+        glide_version = '4.13.1'
+        retrofit_version = "2.9.0"
+        datastore_version = "1.0.0"
+        hilt_version = "2.41"
+        okhttp_version = "4.9.3"
+        lifecycle_version = "2.4.1"
         nav_version = "2.4.2"
     }
 
     dependencies {
-        classpath "androidx.navigation.safeargs.kotlin:androidx.navigation.safeargs.kotlin.gradle.plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
+
 }
-
-
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
