--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
 }
 
 dependencies {
-    def camerax_version = "1.1.0-beta02"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    def camerax_version = "1.2.0-alpha01"
 
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:1.4.1"
