--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
-
+    def tflite_version = "2.9.0"
+    implementation "org.tensorflow:tensorflow-lite:${tflite_version}"
+    implementation "org.tensorflow:tensorflow-lite-gpu:${tflite_version}"
+    implementation "org.tensorflow:tensorflow-lite-support:0.4.1"
 
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
