--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "org.tensorflow:tensorflow-lite:${tflite_version}"
     implementation "org.tensorflow:tensorflow-lite-gpu:${tflite_version}"
     implementation "org.tensorflow:tensorflow-lite-support:0.4.1"
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.1'
 
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
