--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
     buildFeatures {
         viewBinding true
         dataBinding true
+        mlModelBinding true
     }
 
     buildTypes {
@@ -61,6 +62,11 @@ dependencies {
     implementation "org.tensorflow:tensorflow-lite-gpu:${tflite_version}"
     implementation "org.tensorflow:tensorflow-lite-support:0.4.1"
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.1'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.3.0'
+
+    // Glide
+    def glide_version = "4.13.1"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
