--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "11"
-          cache: "gradle"
+#          cache: "gradle"
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
