--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
-
+    implementation 'me.biubiubiu.justifytext:library:1.1'
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.appcompat:appcompat:1.4.2"
     implementation "com.google.android.material:material:1.6.1"
