--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.4'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.11'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'me.biubiubiu.justifytext:library:1.1'
