--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,27 +46,26 @@ android {
 }
 
 dependencies {
+    // Firebase
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.4'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'me.biubiubiu.justifytext:library:1.1'
+
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.appcompat:appcompat:1.4.2"
     implementation "com.google.android.material:material:1.6.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
 
+    // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-
+    // TfLite
     def tflite_version = "2.9.0"
     implementation "org.tensorflow:tensorflow-lite:${tflite_version}"
     implementation "org.tensorflow:tensorflow-lite-gpu:${tflite_version}"
@@ -78,7 +77,12 @@ dependencies {
     def glide_version = "4.13.1"
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
+    // CameraX
     implementation "androidx.camera:camera-camera2:1.2.0-alpha02"
     implementation "androidx.camera:camera-lifecycle:1.2.0-alpha02"
     implementation "androidx.camera:camera-view:1.2.0-alpha02"
+
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
