--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 buildscript {
     ext {
         nav_version = "2.4.2"
+        hilt_version = "2.42"
     }
 
     dependencies {
         classpath "androidx.navigation.safeargs.kotlin:androidx.navigation.safeargs.kotlin.gradle.plugin:$nav_version"
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
