--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         nav_version = "2.4.2"
         hilt_version = "2.42"
+        lifecycle_version = "2.4.1"
     }
 
     dependencies {
