--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,16 +23,16 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "11"
-#          cache: "gradle"
+          cache: "gradle"
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-#      - name: setup local.properties
-#        env:
-#          API_KEY: ${{secrets.API_KEY}}
-#        run:
-#          echo API_KEY="$API_KEY" > ./local.properties
+      - name: setup local.properties
+        env:
+          FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
+        run:
+          echo FIREBASE_DATABASE_URL="$FIREBASE_DATABASE_URL" > ./local.properties
 
       - name: Run Test
         run: |
@@ -40,8 +40,8 @@ jobs:
   android_test:
     name: Run Instrumentation Test
     runs-on: macos-latest
-#    env:
-#      API_KEY: ${{secrets.API_KEY}}
+    env:
+      FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -51,16 +51,16 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "11"
-#          cache: "gradle"
+          cache: "gradle"
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      #      - name: setup local.properties
-      #        env:
-      #          API_KEY: ${{secrets.API_KEY}}
-      #        run:
-      #          echo API_KEY="$API_KEY" > ./local.properties
+      - name: setup local.properties
+        env:
+          FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
+        run:
+          echo FIREBASE_DATABASE_URL="$FIREBASE_DATABASE_URL" > ./local.properties
 
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -71,8 +71,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [ unit_test, android_test ]
-#    env:
-#      API_KEY: ${{secrets.API_KEY}}
+    env:
+      FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
     steps:
       - uses: actions/checkout@v2
 
@@ -94,16 +94,10 @@ jobs:
 #          mkdir "${TMP_KEYSTORE_FILE_PATH}"
 #          echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/github_user_keystore.jks
       - name: Gradle build
-#        env:
-#          API_KEY: ${{secrets.API_KEY}}
-#          KEY_ALIAS: ${{secrets.KEY_ALIAS}}
-#          KEY_PASSWORD: ${{secrets.KEY_PASSWORD}}
-#          STORE_PASSWORD: ${{secrets.STORE_PASSWORD}}
+        env:
+          FIREBASE_DATABASE_URL: ${{secrets.FIREBASE_DATABASE_URL}}
         run:
-#          echo API_KEY="$API_KEY" > ./local.properties
-#          echo KEY_ALIAS="$KEY_ALIAS" > ./local.properties
-#          echo KEY_PASSWORD="$KEY_PASSWORD" > ./local.properties
-#          echo STORE_PASSWORD="$STORE_PASSWORD" > ./local.properties
+          echo FIREBASE_DATABASE_URL="$FIREBASE_DATABASE_URL" > ./local.properties
           ./gradlew app:bundleRelease --stacktrace
 
       - name: Cache Build
