--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,13 +49,14 @@ android {
 
 dependencies {
     // Firebase
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.4'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
 
     implementation 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.appcompat:appcompat:1.4.2"
